--- a/pricing.html
+++ b/pricing.html
@@ -42,8 +42,8 @@
                         <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
                             <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
                         </li>
-                        <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
-                            <a href="pricing.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>Pricing</span></a>
+                        <li class="col-xs-6 col-sm-2 ui-menu-color-pricing menuitem">
+                            <a href="pricing.html" class="hvr-sweep-to-bottom"><i class="fa fa-money" aria-hidden="true"></i><span>Pricing</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
                             <a href="assets/videos/merkmediamovies.mp4" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download Flyer</span></a>
