Added css styling to text by changing color in three reasons section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 </div>
                                 <div class="col-xs-10 col-sm-10">
                                     <h4 class="three-reasons-heading uppercase">Services Performed</h4>
-                                    <p>
+                                    <p class="skills">
                                         I am a skilled car show promoter with resources and abilities to make each event epic. I provide a full service company with the skill set to cover every aspect of your event needs.
                                     </p>
                                 </div>
@@ -114,9 +114,9 @@
                                     </div>
                                     <div class="col-xs-10 col-sm-10">
                                         <h4 class="three-reasons-heading uppercase">Full Service Package</h4>
-                                        <p>
+                                        <p class="skills">
                                             I offer the following services catered to each event:
-                                            <ul>
+                                            <ul class="skills">
                                             <li>Photography</li>
                                             <li>Videography</li>
                                             <li>Models</li>
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="col-xs-10 col-sm-10">
                                     <h4 class="three-reasons-heading uppercase">Social Proof</h4>
-                                    <p>
+                                    <p class="skills">
                                         I have hosted and co-hosted on many events, shows, pop-ups related to the car scene and have had tremendous success in bringing large crowds and revenue to each event. Check out all of my social media platforms and see why your next event should have Merk Media in your corner.
                                     </p>
                                 </div>
