--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
                             <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
-                            <a href="events_gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Past-Events-&-Gallery</span></a>
+                            <a href="events_gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-camera-retro" aria-hidden="true"></i><span>Past-Events-&-Gallery</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
                             <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
-                            <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            <a href="locations.html" class="hvr-sweep-to-bottom"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Locations</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-pricing menuitem">
                                 <a href="pricing.html" class="hvr-sweep-to-bottom"><i class="fa fa-money" aria-hidden="true"></i><span>Pricing</span></a>
