--- a/locations.html
+++ b/locations.html
@@ -29,19 +29,19 @@
                             <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
-                            <a href="events_gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Past-Events-&-Gallery</span></a>
+                            <a href="events_gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-camera-retro" aria-hidden="true"></i><span>Past-Events-&-Gallery</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
-                            <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o " aria-hidden="true "></i><span>Contact</span></a>
+                            <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true "></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem ">
-                            <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users " aria-hidden="true "></i><span>Interests</span></a>
+                            <a href="locations.html" class="hvr-sweep-to-bottom"><i class="fa fa-map-marker" aria-hidden="true "></i><span>Locations</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-pricing menuitem">
                                 <a href="pricing.html" class="hvr-sweep-to-bottom"><i class="fa fa-money" aria-hidden="true"></i><span>Pricing</span></a>
                             </li>
                         <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem ">
-                            <a href="assets/videos/merkmediamovies.mp4" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download " aria-hidden="true "></i><span>Download Flyer</span></a>
+                            <a href="assets/videos/merkmediamovies.mp4" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true "></i><span>Download Flyer</span></a>
                         </li>
                     </ul>
                 </div>
