Updated events information

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     </div>
                     <div class="personal-info-item">
                         <div class="key">
-                            <p class="uppercase">Upcoming Event:</p>
+                            <p class="uppercase">Upcoming Events:</p>
                         </div>
                         <div class="value">
-                            <p>Trunk N Treat Haunt</p>
+                            <p>Red Carpet Part 2</p>
                         </div>
                     </div>
                     <div class="personal-info-item">
@@ -67,7 +67,7 @@
                             <p class="uppercase">Address:</p>
                         </div>
                         <div class="value">
-                            <p>8920 Glendon Way, Rosemead, CA 91770</p>
+                            <p>Check Map Page for Exact Locations</p>
                         </div>
                     </div>
                     <div class="personal-info-item">
@@ -75,7 +75,7 @@
                             <p class="uppercase">Date:</p>
                         </div>
                         <div class="value">
-                            <p>10/31/2020</p>
+                            <p>02/16/2021</p>
                         </div>
                     </div>
                     <div class="personal-info-item">
