--- a/locations.html
+++ b/locations.html
@@ -53,7 +53,7 @@
             <div class="col-xs-12 col-sm-12 col-md-4 bg-color-conferences section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase">Conferences and Meetups attended</h3>
+                        <h3 class="section-heading uppercase">Current and Future Meets and Events</h3>
                     </div>
                 </div>
                 <div id="map"></div>
