Changed event dates

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <p class="uppercase">Upcoming Events:</p>
                         </div>
                         <div class="value">
-                            <p>Red Carpet Part 2</p>
+                            <p>1. Red Carpet Part Deuce  2. Desert Wars</p>
                         </div>
                     </div>
                     <div class="personal-info-item">
@@ -75,7 +75,7 @@
                             <p class="uppercase">Date:</p>
                         </div>
                         <div class="value">
-                            <p>02/16/2021</p>
+                            <p>1. 02/16/2021 2. 02/21/2021</p>
                         </div>
                     </div>
                     <div class="personal-info-item">
