Added two lists on index page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
                             <p class="uppercase">Upcoming Events:</p>
                         </div>
                         <div class="value">
-                            <p>1. Red Carpet Part Deuce  2. Desert Wars</p>
+                            <p>
+                                <ul>
+                                <li>Red Carpet Part Deuce</li>
+                                <li>Desert Wars</li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
                     <div class="personal-info-item">
@@ -75,7 +80,12 @@
                             <p class="uppercase">Date:</p>
                         </div>
                         <div class="value">
-                            <p>1. 02/16/2021 2. 02/21/2021</p>
+                            <p>
+                                <ul>
+                                <li>02/16/2021 (Red Carpet Part Deuce)</li>
+                                <li>02/21/2021 (Desert Wars)</li>
+                                </ul>
+                            </p>
                         </div>
                     </div>
                     <div class="personal-info-item">
