--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     <div class="col-xs-10 col-sm-10">
                                         <h4 class="three-reasons-heading uppercase">Full Service Package</h4>
                                         <p class="skills">
-                                            I offer the following services catered to each event:
+                                            I offer the following services catered to each event (See Pricing Page):
                                             <ul class="skills">
                                             <li>Photography</li>
                                             <li>Videography</li>
