--- a/locations.html
+++ b/locations.html
@@ -61,21 +61,24 @@
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-groups section-column">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-heading uppercase"> My groups and societies</h3>
+                        <h3 class="section-heading uppercase"> EVENT AND MEET LOCATIONS</h3>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2  col-md-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-car" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Coding Grace</h4>
+                                <h4 class="three-reasons-heading uppercase">RED CARPET EVENT</h4>
                                 <p>
-                                    Coding Grace are a group of developers based in Ireland who love to code and do other geeky and not necessarily crafty activities. Some of us code full-time, or just for fun (or both). We have people who are part of other technical user groups such as
-                                    Dublin ALT.NET, GameCraft, Python Ireland, Ruby Ireland and more.
-                                    <a href="https://codinggrace.com/" target="_blank">Coding Grace</a>
+                                    <ul>
+                                    <li>Our very first meet ever hosted under the Merkmedia Banner at the UFC Gym</li>
+                                    <li>Date: 06/28/2020</li>
+                                    <li>Location: 8920 Glendon Way, Rosemead, CA 91770</li>
+                                    </ul>
+                                    <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Check Out the UFC Gyms Here</a>
                                 </p>
                             </div>
                         </div>
@@ -83,14 +86,16 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2  col-md-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-car" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Django Girls</h4>
+                                <h4 class="three-reasons-heading uppercase">2 FAST 2 FURIOUS</h4>
                                 <p>
-                                    Django Girls is a non-profit organization and a community that empowers and helps women to organize free, one-day programming workshops by providing tools, resources and support. We are a volunteer run organization with hundreds of people contributing
-                                    to bring more amazing women into the world of technology.
-                                    <a href="https://djangogirls.org/" target="_blank">Django Girls</a>
+                                    <ul>
+                                    <li>Our second event which hosted models, photograhy, and special guest appearances by Vin Diesel and the Fast and the Furious car collection.</li>
+                                    <li>Date: 08/22/2020</li>
+                                    <li>Location: 3600 Peck Road, El Monte, CA, 91731</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -98,14 +103,16 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2  col-md-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-car" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Full Stack NY</h4>
+                                <h4 class="three-reasons-heading uppercase">RED CARPET EVENT PART DEUCE</h4>
                                 <p>
-                                    Our meetup is an event where web designers and developers can come together to learn from and teach each other about emerging technologies. While speakers at Full Stack focus primarily on angularjs, react, node, hapiJS, espress, plain ole' JavaScript,
-                                    HTML, and CSS, we encourage all local web professionals to join us for vivid discussions around technology across the stack in any language.
-                                    <a href="https://www.meetup.com/javascript-full-stack-development/" target="_blank">Full Stack NY</a>
+                                    <ul>
+                                    <li>Our third event which will be hosting models, photograhy, and special guest appearances by Steve J and Welvin Harris.</li>
+                                    <li>Date: 02/16/2020</li>
+                                    <li>Location: 1331 South Pembroke Lane, Los Angeles, CA, 90015</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -113,14 +120,16 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-xs-2 col-sm-2  col-md-2">
-                                <i class="three-reasons-icon fa fa-users" aria-hidden="true"></i>
+                                <i class="three-reasons-icon fa fa-car" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">IoT Nation</h4>
+                                <h4 class="three-reasons-heading uppercase">DESERT WARS PART TWO</h4>
                                 <p>
-                                    IoT Nation's mission is to inspire, engage, and connect entrepreneurs, investors, professionals, & enthusiasts worldwide who are active in the Internet of Things (IoT). This group is for professionals and enthusiasts in the Internet of Things. We welcome
-                                    those who want to learn about this emerging field which is fascinating as IoT makes use of a diverse range of technologies and has the promise to impact a vast number of vertical markets.
-                                    <a href="https://www.meetup.com/NYCIOT/" target="_blank">IoT Nation</a>
+                                    <ul>
+                                    <li>Our 4th event which will be hosting will be in the desert and will feature sand 1320 races for cash prizes.</li>
+                                    <li>Date: 02/21/2020</li>
+                                    <li>Location: TBA</li>
+                                    </ul>
                                 </p>
                             </div>
                         </div>
@@ -135,13 +144,13 @@
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub ">About</h5>
                 <p class="inline-block ">
-                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                    Full Service Car Show or Event Promoter and Facilitator.
                 </p>
             </div>
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub ">Download My CV</h5>
                 <p class="inline-block ">
-                    Need a printable version of my CV? Download it here.
+                    Need a copy of the flyer for my next event? Download it here.
                     <a href="assets/videos/merkmediamovies.mp4" target="_blank" class="videos-mp4 "><i class="fa fa-download " aria-hidden="true "></i><span class="sr-only">Download link.</span></a>
                 </p>
             </div>
