--- a/pricing.html
+++ b/pricing.html
@@ -56,15 +56,24 @@
     <section class="container-fluid">
         <div class="row bg-color-contact">
             <div>
-                <h3 class="contact-heading uppercase text-center">View My GitHub Projects:</h3>
-                <h5 class="uppercase text-center">(or change the username to search for other user profiles)</h5>
+                <h3 class="contact-heading uppercase text-center">Events and Meets Pricing:</h3>
+                <h5 class="uppercase text-center">All Prices Are Subject To Change Based Upon Location And Needs!!!</h5>
             </div>
-
-            <div class="center-form">
-                <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()">
-                <div id="gh-user-data" class="clearfix"></div>
-                <div id="gh-repo-data" class="clearfix"></div>
-            </div>
+            <div class="col-xs-10 col-sm-10">
+                <h4 class="three-reasons-heading uppercase">Full Services Offered:</h4>
+                    <p class="skills">
+                            <ul class="skills">
+                                 <li>Photography</li>
+                                 <li>Videography</li>
+                                 <li>Models</li>
+                                 <li>Celebrities</li>
+                                 <li>Locations</li>
+                                 <li>Food Vendors</li>
+                                 <li>Local DJs</li>
+                             </ul>
+                     </p>
+             </div>
+            
         </div>
     </section>
     <footer class="container-fluid">
