Added URL for different services

--- a/pricing.html
+++ b/pricing.html
@@ -63,33 +63,47 @@
                 <h4 class="three-reasons-heading uppercase">Full Services Offered:</h4>
                     <p class="skills">
                             <ul class="skills">
+                             <p>
                                 <h4 class="pricing-headers">Photography:</h4>
                                  <li>Photography will be provided by Carlos Lugo</li>
                                  <li>Rate: $200.00 per event</li>
-
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram</a>
+                             </p>
+                             <p>
                                  <h4 class="pricing-headers">Videography:</h4>
                                  <li>Videography will be provided by Rey Diaz</li>
                                  <li>Rate: $200.00 per event</li>
-
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram Or By Email</a>
+                             </p>
+                             <p>
                                  <h4 class="pricing-headers">Models:</h4>
                                  <li>Models will be provided Eve Wolf Models</li>
                                  <li>Rate: $150.00 per model per event</li>
-
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram</a>
+                             </p>
+                            <p>
                                  <h4 class="pricing-headers">Celebrities:</h4>
                                  <li>Celebrities will be based upon location and availability</li>
                                  <li>Rate: please email to discuss rates</li>
-
+                            </p>
+                            <p>
                                  <h4 class="pricing-headers">Locations:</h4>
                                  <li>Locations will be selected by client/host and will have varying rates</li>
                                  <li>Rate: $25.00 - $150.00 per event and based upon permits</li>
-
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram Or By Email</a>
+                            </p>
+                             <p>    
                                  <h4 class="pricing-headers">Vendors:</h4>
                                  <li>Vendors will be charged a flat fee to sell</li>
                                  <li>Rate: $150.00 per event</li>
-                                 
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram Or By Email</a>
+                            </p>
+                            <p>
                                  <h4 class="pricing-headers">Music:</h4>
                                  <li>Local DJs will be contracted with</li>
                                  <li>Rate: $75.00 - $200.00 per event</li>
+                                 <a href="https://www.ufcgym.com/locations/rosemead/" target="_blank">Contact Me Here On Instagram Or By Email</a>
+                            </p>
                              </ul>
                      </p>
              </div>
